优化Server和Client工程结构，仅以JSON和StringUtil作为公共类，仅适用StringUtil.UTF_8